--- a/work.html
+++ b/work.html
@@ -13,44 +13,83 @@
 </head>
     <body>
 
-
-
-     
-
-
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-interval="false">
+   
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets\work-images\Birthday-Clock-400x250.png" class="d-block w-100" alt="Tick Tock Birthday Clock image">
+            <img src="assets\work-images\Birthday-Clock-2000x900.png" class="d-block w-100" alt="Tick Tock Birthday Clock image">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <div class="col-md-12 blocktext270">
+                <h1>
+                 Tick Tock Birthday Clock gives the user a countdown to their birthday, a place to create and store their birthday wishlist and check out their friend's wishlists. 
+                </h1>
+                <h1>
+                  Tick Tock Birthday Clock is built with JavaSCript.  It uses mysql, bcrypt, dotenv, express, handlebars, bootstrap, session and sequelize.  It's deployed on Heroku. 
+                 </h1>
+                <h3>
+                  <a class="link-text button" href="https://github.com/Xr7TSi/Tick-Tock-Birthday-Clock">Visit the TickTock Birthday Clock Github Repository</a>
+                </h3>
+                <h3>
+                  <a class="link-text button" href="https://tick-tock-birthday-clock.herokuapp.com/">See TickTock Birthday Clock deployed on Heroku</a>
+                </h3>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets\work-images\News-Flash-400x250.pngg" class="d-block w-100" alt="News Flash image">
+            <img src="assets\work-images\News-Flash-2000x900.png" class="d-block w-100" alt="News Flash image">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <div class="col-md-12 blocktext270">
+                <h1>
+                 News Flash is a news aggregator that presents stories pulled from the web based on the user's news category preferences.   
+                </h1>
+                <h1>
+                  News Flash is built with JavaSCript.  It uses APIs, bootstrap and local storage.   
+                 </h1>
+                <h3>
+                  <a class="button" href="https://github.com/Xr7TSi/News-Flash">Visit the News Flash Github Repository</a>
+                </h3>
+                <h3>
+                  <a class="button" href="https://xr7tsi.github.io/News-Flash/">See News Flash deployed on Github</a>
+                </h3>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets\work-images\Weather-Dashboard-400x250.png" class="d-block w-100" alt="Weather Dashboard image">
+            <img src="assets\work-images\Weather-Dashboard-2000x900.png" class="d-block w-100" alt="Weather Dashboard image">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <div class="col-md-12 blocktext270">
+                <h1>
+                 Weather Dashboard gives the user the current weather and a five day forecast for any city in the world.
+                </h1>
+                <h1>
+                  Weather Dashboard is built with JavaSCript.  It uses APIs, bootstrap and local storage.  
+                 </h1>
+                <h3>
+                  <a class="button" href="https://github.com/Xr7TSi/Weather-Dashboard">Visit the Weather Dashboard Github Repository</a>
+                </h3>
+                <h3>
+                  <a class="button" href="https://xr7tsi.github.io/Weather-Dashboard/">See Weather Dashboard deployed on Github</a>
+                </h3>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets\work-images\Work-Day-Scheduler-400x250.png" class="d-block w-100" alt="Workday Scheduler image">
+            <img src="assets\work-images\Work-Day-Scheduler-2000x900.png" class="d-block w-100" alt="Workday Scheduler image">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <div class="col-md-12 blocktext270">
+                <h1>
+                 Workday Scheduler is a simple day planner.
+                </h1>
+                <h1>
+                  Workday Scheduler is built with JavaScript.  It uses moment.js, bootstrap and local storage.  
+                 </h1>
+                <h3>
+                  <a class="button" href="https://github.com/Xr7TSi/Workday-Scheduler">Workday Scheduler Github Repository</a>
+                </h3>
+                <h3>
+                  <a class="button" href="https://xr7tsi.github.io/Workday-Scheduler/">See Workday Scheduler deployed on Github</a>
+                </h3>
+              </div>
             </div>
           </div>
         </div>
